<resources>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">Surfnet Demo App</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="home_title">PLASTIC\nORIGINS</string>
    <string name="home_subtitle">Bienvenue sur l’application\nPlastic Origins – AI (bêta) !</string>
    <string name="home_p1">Filmez et collectez des données sur la présence de déchets échoués sur les berges de rivières. Avec son moteur d’IA intégré, cette application se distingue par ses résultats instantanés !</string>
    <string name="home_p2">Nous aimerions connaître votre avis sur cette première version de l’application Plastic Origins - AI afin de la faire évoluer par la suite.</string>
    <string name="home_placeholder">Entrez votre email</string>
    <string name="home_button">Lancer un nouveau suivi vidéo</string>
    <string name="red_dot_tutorial_text"><i>Déchet en cours\nd’analyse</i></string>
    <string name="green_dot_tutorial_text"><i>Déchet comptabilisé</i></string>
    <string name="tutorial_title">Comment ca marche ?</string>
    <string name="tutorial_p1_text">Avant de commencer ta vidéo, tourne ton téléphone en mode paysage, assure toi que la ligne rouge se situe au niveau de la berge et garde ton téléphone le plus stable possible.</string>
    <string name="tutorial_p2_text">L\'IA détecte et compte\nautomatiquement les\ndéchets sur la berge.</string>
    <string name="tutorial_button_text">Je suis prêt</string>
    <string name="home_cgu">En saisissant votre adresse mail ci-dessous, vous acceptez nos CGU. Les données collectées vous seront attribuées.</string>
    <string name="stop_dialog_title">Ta vidéo est en pause</string>
    <string name="stop_dialog_body">Souhaites-tu arrêter le suivi et envoyer tes données ?</string>
    <string name="stop_dialog_yes">Oui</string>
    <string name="stop_dialog_no">Non</string>
    <string name="send_dialog_title">Merci pour ta contributon !</string>
    <string name="send_dialog_body">%1$s déchets identifiés pour %2$sm parcourus</string>
    <string name="send_dialog_button">Lancer un nouveau suivi vidéo</string>

    <!-- region DEBUG STRINGS -->
    <string name="debug_three_vars">%1$s %2$s %3$s</string>
    <string name="debug_two_vars">%1$s %2$s</string>
    <!-- endregion -->
</resources>
