<!-- res/layout/custom_dialog.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogContent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/blurred_background"
    android:padding="28dp">

    <TextView
        android:id="@+id/stopDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/stop_dialog_title"
        android:textAppearance="@style/SubtitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stopDialogBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_dialog_body"
        android:textAlignment="center"
        android:textAppearance="@style/HomeText"
        android:paddingVertical="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stopDialogTitle" />

    <Button
        android:id="@+id/stopDialogNo"
        style="@style/DialogNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rounded_corner"
        android:text="@string/stop_dialog_no"
        app:layout_constraintEnd_toStartOf="@id/stopDialogYes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stopDialogBody" />

    <Button
        android:id="@+id/stopDialogYes"
        style="@style/DialogYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:text="@string/stop_dialog_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/stopDialogNo"
        app:layout_constraintTop_toBottomOf="@id/stopDialogBody" />

</androidx.constraintlayout.widget.ConstraintLayout>
