<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2286DC"
                android:orientation="vertical"
                android:padding="32dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/home_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home_title"
                    android:textAppearance="@style/TitleText"

                    tools:text="@string/home_title" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/home_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_subtitle"
                    android:textAppearance="@style/SubtitleText"
                    tools:text="@string/home_subtitle" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/p1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_p1"
                    android:textAppearance="@style/HomeText"
                    tools:text="@string/home_p1" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/p2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_p2"
                    android:textAppearance="@style/HomeText"
                    tools:text="@string/home_p2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:hint="@string/home_placeholder"
                    android:inputType="textEmailAddress"

                    android:padding="8dp"
                    android:textAppearance="@style/PlaceholderText"
                    android:textColor="@android:color/white"
                    android:textColorHint="#FFFFFF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_button"
                    android:textAppearance="@style/ButtonText" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>